--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "homepage": "https://github.com/vlinde/helper",
     "keywords": ["Laravel", "helper"],
     "require": {
-        "illuminate/support": "~5|~6|~7"
+        "illuminate/support": "~5|~6|~7|~8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3|~4",
+        "orchestra/testbench": "~3|~4|~5|~6",
         "sempro/phpunit-pretty-print": "^1.0"
     },
     "autoload": {
