--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "homepage": "https://github.com/vlinde/helper",
     "keywords": ["Laravel", "helper"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8"
+        "illuminate/support": "~5|~6|~7|~8",
+        "giggsey/libphonenumber-for-php": "^8.12.51"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
