--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,11 @@
     "homepage": "https://github.com/vlinde/helper",
     "keywords": ["Laravel", "helper"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8",
+        "illuminate/support": "~5|~6|~7|~8|~9",
         "giggsey/libphonenumber-for-php": "^8.12.51"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3|~4|~5|~6",
-        "sempro/phpunit-pretty-print": "^1.0"
+        "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
